kubernetes/apps/networking/traefik/app/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-redirect-https
  namespace: networking
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-cloudflare-ips
  namespace: networking
spec:
  ipWhiteList:
    sourceRange:
      - 173.245.48.0/20
      - 103.21.244.0/22
      - 103.22.200.0/22
      - 103.31.4.0/22
      - 141.101.64.0/18
      - 108.162.192.0/18
      - 190.93.240.0/20
      - 188.114.96.0/20
      - 197.234.240.0/22
      - 198.41.128.0/17
      - 162.158.0.0/15
      - 104.16.0.0/13
      - 104.24.0.0/14
      - 172.64.0.0/13
      - 131.0.72.0/22
      - 2400:cb00::/32
      - 2606:4700::/32
      - 2803:f800::/32
      - 2405:b500::/32
      - 2405:8100::/32
      - 2a06:98c0::/29
      - 2c0f:f248::/32
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-local-ips
  namespace: networking
spec:
  ipWhiteList:
    sourceRange:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
      - 169.254.0.0/16
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-github-hooks-ips
  namespace: networking
spec:
  ipWhiteList:
    # https://api.github.com/meta
    sourceRange:
      - 192.30.252.0/22
      - 185.199.108.0/22
      - 140.82.112.0/20
      - 143.55.64.0/20
      - 2a0a:a440::/29
      - 2606:50c0::/32
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-rate-limit
  namespace: networking
spec:
  rateLimit:
    average: 100
    burst: 50
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-secure-headers
  namespace: networking
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
    accessControlMaxAge: 100
    hostsProxyHeaders:
      - "X-Forwarded-Host"
      - "X-Forwarded-For"
      - "X-GEO-City"
      - "Cf-Connecting-Ip"
      - "Cf-Ipcountry"
    stsSeconds: 63072000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    contentTypeNosniff: true
    browserXssFilter: true
    referrerPolicy: "same-origin"
    permissionsPolicy: "camera=(), microphone=(), geolocation=(), payment=(), usb=(), vr=()"
    customResponseHeaders:
      X-Robots-Tag: "none,noarchive,nosnippet,notranslate,noimageindex,"
      City: X-GEO-City
      server: ""
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-oauth
  namespace: networking
spec:
  forwardAuth:
    address: http://traefik-forward-auth.networking:4181
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-authelia
  namespace: networking
spec:
  forwardAuth:
    address: "http://authelia:9091/api/verify?rd=https://auth.${SECRET_DOMAIN}"
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-chains-default
  namespace: networking
spec:
  chain:
    middlewares:
      - name: traefik-middleware-redirect-https
      #- name: traefik-middleware-local-ips
      - name: traefik-middleware-cloudflare-ips
      - name: traefik-middleware-rate-limit
      - name: traefik-middleware-secure-headers
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-chains-forward-auth
  namespace: networking
spec:
  chain:
    middlewares:
      #- name: traefik-middleware-local-ips
      #- name: traefik-middleware-cloudflare-ips
      - name: traefik-forward-auth
      - name: traefik-middleware-redirect-https
      - name: traefik-middleware-rate-limit
      - name: traefik-middleware-secure-headers

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-chains-authelia
  namespace: networking
spec:
  chain:
    middlewares:
      - name: traefik-middleware-local-ips
      - name: traefik-middleware-cloudflare-ips
      - name: traefik-middleware-rate-limit
      - name: traefik-middleware-secure-headers
      - name: traefik-middleware-authelia
