kubernetes/apps/networking/traefik/app/service.yaml
#
# Traefik Service
#
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
  loadBalancerIP: "${TRAEFIK_SERVICE_ADDR}"
  externalTrafficPolicy: Local
  ports:
    - port: 80
      name: web
      targetPort: web
      protocol: TCP
    - port: 443
      name: websecure
      targetPort: websecure
      protocol: TCP
---
#
# Auth Service
#
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: traefik-forward-auth
      port: 4181
      targetPort: 4181
